[gd_scene load_steps=6 format=3 uid="uid://dfs462bxoimm1"]

[ext_resource type="Script" uid="uid://eaee63kb70w6" path="res://scripts/Level2_Jawa.gd" id="1_owuom"]
[ext_resource type="Texture2D" uid="uid://cum37sv1qdt8y" path="res://assets/images/backgrounds/Gemini_Generated_Image_3ku69v3ku69v3ku6.png" id="2_24h0y"]

[sub_resource type="LabelSettings" id="LabelSettings_3xtkk"]
font_size = 32
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_a2kwo"]
font_size = 20
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_djujd"]

[node name="Level2_Jawa" type="Node2D"]
script = ExtResource("1_owuom")
metadata/_edit_vertical_guides_ = [1154.0]
metadata/_edit_horizontal_guides_ = [649.0]

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -206.0
offset_right = 1164.0
offset_bottom = 818.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_24h0y")
stretch_mode = 6

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1153.0
offset_bottom = 649.0

[node name="Header" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 45.0
grow_horizontal = 2
text = "PULAU JAWA - LEVEL 2"
label_settings = SubResource("LabelSettings_3xtkk")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MovesLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 408.0
offset_bottom = 436.0
grow_horizontal = 2
text = "Langkah: 0/4"
label_settings = SubResource("LabelSettings_a2kwo")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_trim_flags = 128

[node name="PuzzleContainer" type="Control" parent="UI"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -224.0
offset_right = 150.0
offset_bottom = 76.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResultContainer" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 46.0
offset_top = 116.5
offset_right = -39.0
offset_bottom = 269.5
grow_horizontal = 2
grow_vertical = 2

[node name="ResultLabel" type="Label" parent="UI/ResultContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_djujd")
horizontal_alignment = 1
autowrap_mode = 2

[node name="RestartBtn" type="Button" parent="UI"]
layout_mode = 0
offset_left = 462.0
offset_top = 608.0
offset_right = 545.0
offset_bottom = 639.0
text = "Coba Lagi"

[node name="NextIslandBtn" type="Button" parent="UI"]
layout_mode = 0
offset_left = 574.0
offset_top = 608.0
offset_right = 682.0
offset_bottom = 639.0
text = "Selanjutnya.."

[connection signal="pressed" from="UI/RestartBtn" to="." method="_on_restart_btn_pressed"]
[connection signal="pressed" from="UI/NextIslandBtn" to="." method="_on_next_island_btn_pressed"]
